# OpenglNotes

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  rc.md
src/1_getting_started/: chp_1.md
src/1_getting_started/1_1_hello_window/: hello_window.cpp  hello_world.cpp
src/ChernoOpenGL/src/: Application.cpp
src/LearnOpenGL/1_getting_started/1_1_hello_window/: clion等删除所有注释的方法.md  hello_window_no_comments.txt
src/LearnOpenGL/1_getting_started/2_1_hello_triangle/: hello_triangle.cpp  hello_triangle_exercise1.cpp  hello_triangle_exercise3.cpp  hello_triangle_index.cpp  理解拾遗.md
src/LearnOpenGL/1_getting_started/3_shaders/: shaders_class.cpp  shaders_interpolation.cpp  shaders_uniform.cpp
src/LearnOpenGL/Utility/: shader.cpp  shader.h
